--- a/.env
+++ b/.env
@@ -36,3 +36,9 @@ APP_SECRET=6ba522d0a00907ca43003df6402c1e5b
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
 DATABASE_URL=mysql://root:root@127.0.0.1:3306/cda1_db?charset=UTF8MB4&server_version=5.7
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
